--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Propiedad value</h1>
     <form>
-        <input type="text" placeholder="nombre" id="entrada">
+        <input type="text" placeholder="Ingresa tu nombre" id="entrada">
     </form>
     <button id="btn">Enviar</button>
     <script src="./app.js"></script>
